# scrb

./: .gitignore  Cargo.toml  Justfile  f2g.py
assets/characters/Animations/: idle.glb  jump.glb  run.glb
assets/characters/Model/: characterMedium.glb
assets/models/alphabet_block/: mesh.glb
assets/models/amusementpark/0/: mesh.glb
assets/models/anaconda/: mesh.glb
assets/models/apple/0/: mesh.glb
assets/models/bal/: mesh.glb
assets/models/bal/0/: mesh.glb
assets/models/cake/: mesh.glb
assets/models/cargo/: mesh.glb
assets/models/cargo/0/: mesh.glb
assets/models/cbue/: mesh.glb
assets/models/cherry_blossom/: mesh.glb
assets/models/christmas_tree/: mesh.glb
assets/models/christmass_tree/: mesh.glb
assets/models/clear/: mesh.glb
assets/models/colossal_palm_tree/: mesh.glb
assets/models/cruise_ship/: mesh.glb
assets/models/cubed/: mesh.glb
assets/models/dinosaur/: mesh.glb
assets/models/dragon/: mesh.glb
assets/models/durian/: mesh.glb
assets/models/egg/0/: mesh.glb
assets/models/empirestatebuilding/0/: mesh.glb
assets/models/examination/: mesh.glb
assets/models/fish_tank/: mesh.glb
assets/models/formula_one/: mesh.glb
assets/models/galaxy/0/: mesh.glb
assets/models/goldfish/: mesh.glb
assets/models/grasshopper/: mesh.glb
assets/models/javascript/: mesh.glb
assets/models/kangaroo/: mesh.glb
assets/models/king_cobra/: mesh.glb
assets/models/king_penguin/: mesh.glb
assets/models/lion/: mesh.glb
assets/models/lion_king/: mesh.glb
assets/models/manatee/: mesh.glb
assets/models/minecraft_grass/: mesh.glb
assets/models/minecraft_grass_block/: mesh.glb
assets/models/mountain/: mesh.glb
assets/models/mystery_block/: mesh.glb
assets/models/palm_tree/: mesh.glb
assets/models/pasta_bowl/: mesh.glb
assets/models/pastabowl/0/: mesh.glb
assets/models/pine_cone/: mesh.glb
assets/models/pine_tree/: mesh.glb
assets/models/pizza/: mesh.glb
assets/models/pizza_chef/: mesh.glb
assets/models/potato/: mesh.glb
assets/models/python/0/: mesh.glb
assets/models/radio/: mesh.glb
assets/models/skyscraper/: mesh.glb
assets/models/skyscrapper/: mesh.glb
assets/models/studio/: mesh.glb
assets/models/treehouse/: mesh.glb
assets/models/volleyball/: mesh.glb
assets/models/whale/: mesh.glb
assets/models/zebra/: mesh.glb
backend/: .python-version  realtime.py  requirements.txt
src/: lib.rs  main.rs
src/components/: color.rs  core.rs  mod.rs  modifier.rs
src/plugins/: assets.rs  mod.rs  player.rs  ui.rs  world.rs
(+3 files in other folders)
